--- a/index.html
+++ b/index.html
@@ -7,32 +7,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-
+<link rel="stylesheet" href="./style.css">
     <title>Fibonacci</title>
 </head>
 
 <body>
-    <div class="container">
-        <div class="row align-items-start">
 
-            <div class="col-6 mt-5">
-                <h1>Fibonacci Calculator</h1>
+    <h1 class="align-items-center m-5 display-1 ">Fibonacci Calculator</h1>
 
-            
-        
-        <div class="row align-items-start">
-            <div class="col-3">The Fibonnaci Of</div>
-            <div class="col-2"><input  type="text" class="form-control" id="index"> </div>
-            <div class="col-1">
-                <button type="button" class="btn btn-primary btn-sm">Is</button>
-            </div>
-            <div class="col-1 number">
-                <p><u>5</u></p>
-            </div>
+    <form class="d-flex  flex-row m-5 mb-0 align-items-center">
+        <div class="p-1 fs4">
+            The Fibonnaci Of
         </div>
+
+        <div class="p-1" >
+            <input size="2"  type="text" placeholder="#"  class="p-1 form-control  " id="index"     >
+
         </div>
-    </div>
+
+        <div class="p-1">
+            <button type="button" class="h6 mx-1 btn btn-primary btn-sm">Is</button>
+        </div>
+
+        <div class="p-1">
+                <u class="number">5</u>
+
+        </div>
+
+        <div id="spinner" class=" spinner-border text-dark d-none" role="status">
+            <span class="sr-only"></span>
+        </div>
+        <div id="error" , class="fs-6 text d-none text-danger">Server Error: </div>
+
+
+    </form>
+<div class="d-flex m-5 ps-2 p-0 mt-0  flex-row  align-items-center rounded text-danger error50 d-none">
+    Error
 </div>
+
+
+
+
 
 
 
