--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-<link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style.css">
     <title>Fibonacci</title>
 </head>
 
@@ -20,8 +20,8 @@
             The Fibonnaci Of
         </div>
 
-        <div class="p-1" >
-            <input size="2"  type="text" placeholder="#"  class="p-1 form-control  " id="index"     >
+        <div class="p-1">
+            <input size="2" type="text" placeholder="#" class="p-1 form-control  " id="index">
 
         </div>
 
@@ -30,7 +30,7 @@
         </div>
 
         <div class="p-1">
-                <u class="number">5</u>
+            <u class="number">5</u>
 
         </div>
 
@@ -41,9 +41,24 @@
 
 
     </form>
-<div class="d-flex m-5 ps-2 p-0 mt-0  flex-row  align-items-center rounded text-danger error50 d-none">
-    Error
-</div>
+    <div class="d-flex m-5 ps-2 p-0 mt-0  flex-row  align-items-center rounded text-danger error50 d-none">
+        Error
+    </div>
+    <div class="d-flex flex-row align-items-center mt-3 mb-5">
+        <h2 class="display-3 ms-5 ">Results</h2>
+        <div id="spinner2" class="ms-3  d-none spinner-border" role="status">
+            <span class="visually-hidden">Loading...</span>
+        </div>
+    </div>
+    <div class="result mt-3 ms-5">
+
+        <span class=" fs-5 border-bottom pb-3 border-secondary">
+         
+        </span>
+
+    </div>
+
+
 
 
 
