--- a/index.html
+++ b/index.html
@@ -55,11 +55,12 @@
         </div>
         
     </div>
-    <select class="ms-5 mb-2" name="priority">
-        <option>Choose Priority</option>
-        <option value="high">High</option>
-        <option value="medium">Medium</option>
-        <option value="low">Low</option>
+    <select class="ms-5 mb-2 btn btn-secondary btn-sm dropdown-toggle mySelect" name="priority">
+        <option>Sort by</option>
+        <option value="numAsc">Number Asc</option>
+        <option value="numDesc">Number Desc</option>
+        <option value="dateAsc">Date Asc</option>
+        <option value="dateDesc">Date Desc</option>
     </select>
     
     <div class="result mt-3 ms-5">
