--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
         </div>
 
         <div class="p-1">
-            <input size="1" type="number" placeholder="#" class="pt-1 pb-1 form-control  " style="width:100px" id="index">
+            <input size="1" type="number" min="1" max="50" placeholder="#" class="pt-1 pb-1 form-control  " style="width:100px" id="index">
 
         </div>
 
         <div class="p-1">
-            <button type="button" class="h6 btn btn-primary ">Is</button>
+            <button type="button" class="h6 btn m-1 btn-sm btn-primary ">Is</button>
         </div>
 
         <div class="fs-4 p-1">
-            <u class="number">5</u>
+            <u class="number d-none"></u>
         </div>
 
 
