--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
     <title>Fibonacci</title>
 </head>
@@ -50,41 +53,32 @@
         <input type="checkbox" id="accept" class="save"> Save Calculation
     </div>
     <div class="d-flex flex-row align-items-center mt-3 mb-2">
-        <h2 class="display-3 ms-5 ">Results</h2>
+        <h2 class="display-4 ms-5 mb-2 mt-4">Results</h2>
 
-        <div id="spinner2" class="ms-3  d-none spinner-border" role="status">
+        <div id="spinner2" class="ms-4  d-none spinner-border" role="status">
             <span class="visually-hidden">Loading...</span>
         </div>
 
     </div>
-    <select class="ms-5 mb-2 btn btn-grey dropdown-toggle mySelect " name="priority">
-
-        <option>Sort by</option>
-        <option value="numAsc">Number Asc</option>
-        <div class="dropdown-divider"></div>
-        <option value="numDesc">Number Desc</option>
-        <div class="dropdown-divider"></div>
-        <option value="dateAsc">Date Asc</option>
-        <div class="dropdown-divider"></div>
-        <option value="dateDesc">Date Desc</option>
-        </div>
-    </select>
+    <div class="dropdown">
+        <button aria-haspopup="true" aria-expanded="false" class="btn btn-grey dropdown-toggle ms-5 mySelect"
+            data-bs-toggle="dropdown" type="button" data-toggle="dropdown"">
+            Sort by    
+        </button>
+        <div id=" menu" class="dropdown-menu">
+            <button class="dropdown-item" type="button" value="numAsc">Number Asc</button>
+            <hr class="dropdown-divider">
+            <button class="dropdown-item" type="button" value="numDesc">Number Desc</button>
+            <hr class="dropdown-divider">
+            <button class="dropdown-item" type="button" value="dateAsc">Date Asc</button>
+            <hr class="dropdown-divider">
+            <button class="dropdown-item" type="button" value="dateDesc">Date Desc</button>
+    </div>
+    </div>
 
     <div class="result flex-column d-flex mt-3 ms-5">
 
-        <span class=" fs-5 border-bottom pb-3 border-secondary">
-
-        </span>
-
     </div>
-
-
-
-
-
-
-
-
 
 
     <script src="./index.js"></script>
